# cs_golf

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: lidar_view.rviz  motions.json  moveit_notebook.rviz  optimal.json  poses.json
data/: README.md
install/: README.md  autostart-api.bash  autostart-controller.bash  autostart-roscore.bash  cs_golf_api.service  cs_golf_controller.service  cs_golf_roscore.service  power
launch/: cs-golf-controller-api.launch  cs-golf-controller.launch  iiwa_golf_gazebo.launch  lidar_view.launch  run.launch
notebooks/: GRBFTrajectoryTest.ipynb  InitPoses.ipynb  Learn trajectories.ipynb  PutterRotations.ipynb
scripts/: autoplay.py  commanding.py  get_real_time_factor.py  interaction_controller.py  learning.py  lidar.py  user.py  view_scores.py
sim/: iiwa_golf.world  iiwa_golf_old.world  iiwa_only.world
sim/iiwa/: model.sdf
src/cs_golf/: persistence.py  robot.py  simulation.py  sound.py  trajectories.py  transformations.py
srv/: Plan.srv  RateIteration.srv
sunrise/FRI_Golf/: .classpath  .project  SafetyConfiguration.sconf  StationSetup.cat
sunrise/FRI_Golf/.SafetyData/: UserDefinedSafetyNames.kxr  safety.properties
sunrise/FRI_Golf/.Sunrise/: UserCredentials.xml  sunrise.properties
sunrise/FRI_Golf/src/: RoboticsAPI.data.xml
sunrise/FRI_Golf/src/frigolf/: FRIGolf.java
