<?xml version="1.0"?>
<package format="2">
  <name>cs_golf</name>
  <version>0.0.0</version>
  <description>Robot playing golf with interactive learning</description>

  <maintainer email="yoan@aubrune.eu">Yoan Mollard</maintainer>
  <license>GPL3</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
<build_depend>position_controllers</build_depend>
<exec_depend>position_controllers</exec_depend>
<build_depend>iiwa_stack</build_depend>
<build_depend>message_generation</build_depend>
<exec_depend>iiwa_stack</exec_depend>
<buildtool_depend>catkin</buildtool_depend>

<export></export>
</package>
